--- a/.htaccess
+++ b/.htaccess
@@ -4,13 +4,14 @@
     #RewriteBase /
 
     # Deny access to internal dirs and files by passing the URL to Pico
+    RewriteRule ^content/.*\.(jpg|jpeg|png|gif)$ - [L]
     RewriteRule ^(\.git|config|content|content-sample|lib|vendor)(/|$) index.php [L]
     RewriteRule ^(CHANGELOG\.md|composer\.(json|lock)) index.php [L]
 
     # Enable URL rewriting
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^ index.php [L]
+    RewriteRule ^(.*)$ index.php?$1 [L,QSA]
 
     <IfModule mod_env.c>
         # Let Pico know about available URL rewriting
